--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
       "WithStatement"
     ],
     "no-plusplus": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
   }
 }
