--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,6 @@
     ],
     "no-plusplus": "off",
     "class-methods-use-this": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
   }
 }
